myAngularProj/src/app/sidebar/sidebar.component.css
/* side bar to hold all places detail */
#detailPane{

    /* overall design */
    background-color: rgb(255, 255, 255);
    position:absolute;
    top:50px;
    left:0;
    visibility: hidden;
    overflow-y: scroll;
    filter: drop-shadow(2px 2px 6px rgba(0, 0, 0, 0.3));
}

#IconBar{
    visibility: hidden;

    margin-right: 20px;
    margin-top: 20px;
    margin-bottom: 20px;

    display: flex;
    align-items: center; /* puts items vertically in center */
    justify-content: left;
}

#favoriteBtn{
    outline: none;
    border: none;
    background-color: transparent;
    /* float:left; */
}

#favoriteBtn img:active{
    filter: opacity(50%);
}

#directionsIconBtn{
    outline: none;
    border: none;
    background-color: transparent;
}

#directionsIconBtn img:active{
    filter: opacity(50%);
}

#bookmarkBtn{
    outline: none;
    border: none;
    background-color: transparent;
}

#bookmarkBtn img:active{
    filter: opacity(50%);
}


#name{
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 25px;
    padding-top: 15px;
    padding-bottom: 10px;
    padding-left: 15px;

    display: flex;
    align-items: center; /* puts items vertically in center */
    justify-content: left;
}

/* side bar icon images */
img {
    max-width: 25px;
}

/* for image of the place in side bar */
#PlaceImage{
    max-width: 100%;
}

#imgHolder{
    max-height: 360px;
    overflow-y: hidden;
}

.DetailChunk{
    display: flex;
    align-items: center; /* puts items vertically in center */
    justify-content: center;
}

.sideBarIcon {
    /* makes it stay in place to the left */
    /* margin-right: auto; */
    max-width: 25px;
    margin-left: 10px;
    padding-top: 10px;
}


/* place information on leftside bar */
.PlaceDetails {
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    font-size: 14px;

    /* text stays to the left */
    margin-right: auto;
    margin-left: 10px;
    padding-right: 10px;
    padding-top: 10px;
    /* padding-left: 10px; */
}

#closeSidebarBtn{
    position: absolute;
    top:10px;
    right:10px;
}

#directionsBtn{
    z-index: 20;
    margin-left: 10px;
    margin-top: 20px;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    border: 1px solid black;
    border-radius: 2px;
    width:130px;
    height:31.5px;
    padding-left: 10px;
    padding-right: 10px;
    background-color: transparent;
}

#directionsBtn:hover{
    background-color: grey;
}

#drivingText{
    font-size: 20px;
    position: relative;
    margin-top: 20px;
    margin-left: 10px;
}

.displayName,.displayNum{
    float:left;
    padding-right: 20px;
}

.divholders{
    margin: auto;
    padding-top: 20px;
    width:300px;
    height: 20px;
}

#directionsHolder{
    visibility: hidden;
    margin-bottom: 20px;
}

